@anmol: Bakeoff v2 UX look and feel

--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -10,7 +10,7 @@
 
 <main role="main">
 
-    <div class="jumbotron">
+    <div class="jumbotron bg-transparent">
         <div class="container">
             <h1 class="display-3">Report: {{ curr_user.username }}</h1>
             
