--- a/templates/recs_expert.html
+++ b/templates/recs_expert.html
@@ -8,7 +8,7 @@
 <main role="main">
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron bg-transparent">
         <div class="container">
             
             <h1 class="display-3">Recommendations for {{ curr_user }}</h1>
