--- a/templates/report.html
+++ b/templates/report.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/user_report.css' %}">
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron bg-transparent">
     <div class="container">
         <h1 class="display-3">Competency Report</h1>
 
