--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             flex-direction: column;
         }
         .navbar {
-            height: 100vh;
+            height: 100%;
         }
     </style>
 
@@ -42,7 +42,7 @@
 
     <div class="container-fluid">
         <div class="row justify-content-start">
-            <div class="col col-sm col-md-3 col-lg-2">
+            <div class="col col-sm col-md-3 col-lg-2 p-0">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2 w-100">
 
                     <a class="navbar-brand" href="#" style="font-family: 'Poppins';"><b>CikguHub</b></a>
