Change navbar background color to black

--- a/main/static/base/base.css
+++ b/main/static/base/base.css
@@ -151,5 +151,8 @@
 /* ------------------ Buttons Ends ------------------ */
 
 /* ------------------ NavBar Begins ------------------ */
+.navbar-custom-bg{
+    background-color: black;
+}
 /* ------------------ NavBar Ends ------------------ */
 
