Change navbar background color to black

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </head>
 <body class="cikgu_background">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom-bg">
         <a class="navbar-brand" href="#">CikguHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
