Fix accessbility on rec page

--- a/templates/recs.html
+++ b/templates/recs.html
@@ -33,20 +33,22 @@
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0 pb-2">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Series: {{ series.title }} - Track: {{ series.track.title }}
                         </button>
                     </h5>
                     <div class="row justify-content-center align-items-center pb-2">
                         <div class="col-sm col-md-3">
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="{{ module.video.url }}" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="{{ module.video.url }}" allowfullscreen title="Frame for embeded video"></iframe>
                             </div>
                         </div>
                         <div class="col-sm col-md-7">
                             <p>Next Video: {{ module.video.title }}</p>
                             {% for q in module.questions.all %}
-                            <li>{{ q.question }}</li>
+                            <ul>
+                                <li>{{ q.question }}</li>
+                            </ul>
                             {% endfor %}
                         </div>
                         <div class="col-sm col-md-2">
@@ -82,20 +84,22 @@
             <div class="card">
                 <div class="card-header" id="headingTwo">
                     <h5 class="mb-0 pb-2">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             Series: {{ series2.title }} - Track: {{ series2.track.title }}
                         </button>
                     </h5>
                     <div class="row justify-content-center align-items-center pb-2">
                         <div class="col-sm col-md-3">
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="{{ module2.video.url }}" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="{{ module2.video.url }}" allowfullscreen title="Frame for embed video"></iframe>
                             </div>
                         </div>
                         <div class="col-sm col-md-7">
                             <p>Next Video: {{ module2.video.title }}</p>
                             {% for q in module2.questions.all %}
-                            <li>{{ q.question }}</li>
+                            <ul>
+                                <li>{{ q.question }}</li>
+                            </ul>
                             {% endfor %}
                         </div>
                         <div class="col-sm col-md-2">
@@ -130,12 +134,14 @@
                 <div class="row">
                     <div class="col-sm col-md-3">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="{{ m.video.url }}" allowfullscreen></iframe>
+                            <iframe class="embed-responsive-item" src="{{ m.video.url }} " allowfullscreen title="Frame for embed video"></iframe>
                         </div>
                     </div>
                     <div class="col-sm col-md-8">
                         {% for q in m.questions.all %}
-                        <li>{{ q.question }}</li>
+                        <ul>
+                            <li>{{ q.question }}</li>
+                        </ul>
                         {% endfor %}
                     </div>
                     <div class="col-sm col-md-1">
