--- a/templates/report.html
+++ b/templates/report.html
@@ -38,7 +38,7 @@
 
                 <div class="p-2" style="flex-grow: 1;">
                     <div class="input-group">
-                        <input type="range" class="form-control-range" id="planner" min="0" max="100"
+                        <input type="range" class="form-control-range" id="planner-{{id}}" min="0" max="100"
                             value="{{value.value}}" disabled aria-label="Competency score slider for {{value.name}}">
                         <p>{{ value.value }}</p>
                     </div>
