Fix accessbility on rec user page

--- a/templates/recs.html
+++ b/templates/recs.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="col-sm col-md-2">
                             <a href="{% url 'recsys:recommended_module' module.id %}" class="btn btn-primary">Launch Module</a>
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn btn-info collapsed mt-2" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Series Progress
                             </button>
                         </div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="col-sm col-md-2">
                             <a href="{% url 'recsys:recommended_module' module2.id %}" class="btn btn-primary">Launch Module</a>
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                            <button class="btn btn-info collapsed mt-2" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                 Series Progress
                             </button>
                         </div>
