Added google tag for monitoring

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,18 @@
     <link rel="stylesheet" href="{% static 'base/base.css' %}">
     <link rel="stylesheet" href="{% static 'recsys/user_clustering.css' %}">
 
-    </head>
+</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RP11GGNV4P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RP11GGNV4P');
+</script>
+
 <body class="cikgu_background">
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom-bg">
