--- a/templates/report.html
+++ b/templates/report.html
@@ -28,30 +28,44 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-lg-4">
+        <div class="col-sm-12 col-lg-3">
             <h3 class="mb-4">Competencies</h3>
             {% for id, value in metrics.items %}
-            <div class="d-flex flex-row justify-content-start align-items-start">
+            <div class="d-flex flex-row" >
                 <div class="p-2">
                     <img src="{% static value.icon_url %}" alt="icon for {{value.name}}" width="50" height="50" data-toggle="tooltip" data-placement="right" title="{{value.tooltip}}"> 
                 </div>
 
-                <div class="p-2" style="flex-grow: 1;">
-                    <div class="input-group">
+                <div class="p-2 d-flex align-items-end" data-toggle="tooltip" data-placement="right" title="{{value.tooltip}}">
+                    {% comment %} <div class="input-group">
                         <input type="range" class="form-control-range" id="planner-{{id}}" min="0" max="100"
                             value="{{value.value}}" disabled aria-label="Competency score slider for {{value.name}}">
                         <p>{{ value.value }}</p>
-                    </div>
+                    </div> {% endcomment %}
+                    <p>{% if value.value <= 33 %}Beginner{% elif value.value <= 66 %}Intermediate{% else %}Master{% endif %} {{ value.name }}</p> 
                 </div>
             </div>
 
-            <p style="margin-top: -20px;">{{ value.name }}</p>
+            {% comment %} <p ></p> {% endcomment %}
             {% endfor %}
         </div>
 
-        <div class="col-sm-12 col-lg-8">
+        <div class="col-sm-12 col-lg-9">
             <h3 class="mb-4">Feedback</h3>
             <p>{{ description|safe }}</p>
+
+            <hr>
+            <p><b>Human Edited:</b> {{ feedback_obj.human_edited }}</p>
+            <p><b>Human Approved:</b> {{ feedback_obj.human_approved }}</p>
+            <form action="{% url 'report:user_report' user.id %}" method="POST">
+                <div class="input-group">
+                    {% csrf_token %}
+                    <input type="text" class="form-control" placeholder="Questions/comments about feedback?" aria-label="Comment" name="userfeedback" required>
+                    <div class="input-group-append">
+                        <input type="submit" class="btn btn-primary" value="Comment">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
     <a class="button" href="{% url 'recsys:user_recs' %}">Join a class to improve skills!</a>
