--- a/templates/rec_module.html
+++ b/templates/rec_module.html
@@ -11,7 +11,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron bg-transparent>
         <div class="container">
-            <h1 class="display-3">Recommended Activity</h1>
+            <h1 class="display-3">Activities</h1>
             <br>
             {% if module %}
             <div class="embed-responsive embed-responsive-16by9">
