--- a/templates/recs.html
+++ b/templates/recs.html
@@ -9,7 +9,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron bg-transparent">
         <div class="container">
-            <h1 class="display-3">Recommended Activity</h1>
+            <h1 class="display-3">Activities</h1>
             
             {% if user.is_superuser %}
             <div class="dropdown">
