--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -12,7 +12,7 @@
 
     <div class="jumbotron bg-transparent">
         <div class="container">
-            <h1 class="display-3">Report: {{ curr_user.username }}</h1>
+            <h1 class="display-3">Progress Report: {{ curr_user.username }}</h1>
             
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
