--- a/templates/report.html
+++ b/templates/report.html
@@ -27,6 +27,14 @@
 </div>
 
 <div class="container">
+    
+    <div class="row justify-content-md-center">
+        <div class="col-sm-4 col-md-2">{{teaching_plot | safe}}</div>
+        <div class="col-sm-4 col-md-2">{{leadership_plot | safe}}</div>
+        <div class="col-sm-4 col-md-2">{{multimedia_plot | safe}}</div>
+        <div class="col-sm-4 col-md-2">{{coaching_plot | safe}}</div>
+        <div class="col-sm-4 col-md-2">{{digital_plot | safe}}</div>
+    <div>
     <div class="row">
         <div class="col-sm-12 col-lg-3">
             <h3 class="mb-4">Competencies</h3>
