Initial school aggregate

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="reportMenu">
                                 <a class="dropdown-item" href="{% url 'report:user_report' %}">User Preview</a>
-                                <a class="dropdown-item" href="{% url 'report:expert_report' 0 %}">Expert</a>
+                                <a class="dropdown-item" href="{% url 'report:expert_report' 0 %}">Expert Preview</a>
+                                <a class="dropdown-item" href="{% url 'report:school_report' %}">School Dashboard</a>
                             </div>
                         </li>
                         {% comment %} <li class="nav-item dropdown">
