--- a/templates/report_school.html
+++ b/templates/report_school.html
@@ -17,6 +17,9 @@
     <div class="row justify-content-md-center">
         <div class="col-md-12">{{agg_plot | safe}}</div>
     <div>
+    <div class="row justify-content-md-center">
+        <div class="col-md-12">{{topics_plot | safe}}</div>
+    <div>
 </div>
 
 <script>
