--- a/templates/report_school.html
+++ b/templates/report_school.html
@@ -16,10 +16,10 @@
 <div class="container">
     <div class="row justify-content-md-center">
         <div class="col-md-12">{{agg_plot | safe}}</div>
-    <div>
+    </div>
     <div class="row justify-content-md-center">
         <div class="col-md-12">{{topics_plot | safe}}</div>
-    <div>
+    </div>
 </div>
 
 <script>
