--- a/templates/report.html
+++ b/templates/report.html
@@ -33,14 +33,14 @@
         <div class="col-sm-4 col-md-2">{{multimedia_plot | safe}}</div>
         <div class="col-sm-4 col-md-2">{{coaching_plot | safe}}</div>
         <div class="col-sm-4 col-md-2">{{digital_plot | safe}}</div>
-    <div>
+    </div>
         
     <div class="row justify-content-md-center align-items-center">
         <b>Keywords:&nbsp</b>{{keywords}}
         <a class="btn btn-secondary btn-sm ml-2" data-toggle="collapse" href="#topicsCollapse" role="button" aria-expanded="false" aria-controls="topicsCollapse">
             Topics by Answer
         </a>
-    <div>
+    </div>
 
     <div class="collapse mt-2" id="topicsCollapse">
         <div class="card card-body">
