--- a/templates/base.html
+++ b/templates/base.html
@@ -89,10 +89,10 @@
                             <a class="nav-link" href="{% url 'recsys:user_recs' %}">Home<span class="sr-only">(current)</span></a>
                         </li> {% endcomment %}
                         <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.app_name == 'recsys' %}active{% endif %}" href="{% url 'recsys:user_recs' %}">Key Activities</a>
+                        <a class="nav-link {% if request.path == '/recsys/recs/' %}active{% endif %}" href="{% url 'recsys:user_recs' %}">Key Activities</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.app_name == 'all_activities' %}active{% endif %}" href="{% url 'recsys:all_activities' %}">All Activities</a>
+                        <a class="nav-link {% if request.path == '/recsys/all_activities/' %}active{% endif %}" href="{% url 'recsys:all_activities' %}">All Activities</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link {% if request.resolver_match.app_name == 'report' %}active{% endif %}" href="{% url 'report:user_report' %}">Progress</a>
