--- a/templates/report_school.html
+++ b/templates/report_school.html
@@ -9,7 +9,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron bg-transparent">
     <div class="container">
-        <h1 class="display-3">School-level Report</h1>
+        <h1 class="display-3">School Report: {{curr_user.learnermodel.school}}</h1>
     </div>
 </div>
 
