--- a/templates/report_school.html
+++ b/templates/report_school.html
@@ -25,6 +25,10 @@
     <div class="row justify-content-md-center">
         <div class="col-md-12">{{watched_plot | safe}}</div>
     </div>
+    <br>
+    <div class="row justify-content-md-center">
+        <div class="col-md-12">{{competency_plot | safe}}</div>
+    </div>
 </div>
 
 <script>
